samples/_failures_safe/1761397634_cc5066_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17d2ec67.c: In function ‘main’:
./samples/SAFE/__tmp_17d2ec67.c:166:5: error: expected expression at end of input
  166 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_17d2ec67.c:166:5: error: expected declaration or statement at end of input
